fixed small bug with image overlap

--- a/_sass/_features.scss
+++ b/_sass/_features.scss
@@ -46,12 +46,10 @@
   }
 
   .feature-image-speed {
-    margin-top: -30px;
     margin-bottom: -30px;
   }
 
   .feature-image-secure {
-    margin-top: -30px;
     margin-bottom: -30px;
   }
 }
